<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/purple_screen"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/your_name"
                            app:layout_constraintStart_toStartOf="@+id/name"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView3" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/your_email"
                            app:layout_constraintStart_toStartOf="@+id/emailAdress"
                            app:layout_constraintTop_toBottomOf="@+id/name" />

                        <EditText
                            android:id="@+id/emailAdress"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textEmailAddress"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/your_password"
                            app:layout_constraintStart_toStartOf="@+id/password"
                            app:layout_constraintTop_toBottomOf="@+id/emailAdress" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/new_password_annotation"
                            android:inputType="textPassword"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView2" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/your_birthday"
                            app:layout_constraintStart_toStartOf="@+id/birtday"
                            app:layout_constraintTop_toBottomOf="@+id/password" />

                        <Button
                            android:id="@+id/birtday"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/your_birthday"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView5" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/horoscopeCardView"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:background="@color/teal_200"
                            android:elevation="6dp"
                            android:visibility="visible"
                            app:cardCornerRadius="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/birtday">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:background="#F3F3F3"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:padding="8dp">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/textView6"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/your_age"
                                        android:textSize="18sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/age"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textStyle="normal" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.8"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/horoscopeName"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="16dp"
                                        android:text="@string/your_horoscope"
                                        android:textSize="18sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/horoscopeDates"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="16dp" />

                                </LinearLayout>

                                <ImageView
                                    android:id="@+id/horoscopeSign"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_weight="0.2"/>

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <Button
                            android:id="@+id/updateButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/reload"
                            android:drawableTint="@color/purple_500"
                            android:text="@string/update"
                            android:textColor="@color/black"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/horoscopeCardView" />

                        <Button
                            android:id="@+id/exitButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/logout"
                            android:drawableTint="@android:color/holo_red_dark"
                            android:text="@string/exit"
                            android:textColor="@color/black"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/updateButton" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>